# scylla-ccm

./: .gitignore  .travis.yaml  .travis.yml  MANIFEST.in  PERFORMANCE_IMPROVEMENTS.md  README.md  README.md.backup  ccm  flake.nix  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  scylla_ccm_env.sh  setup.py  tox.ini  urchin_env.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci-tests.yml  docker-tests.yml  integration-tests.yml  nix.yml  trigger_jenkins.yaml
ccmlib/: cli_session.py  cluster.py  cluster_factory.py  common.py  container_client.py  dse_cluster.py  dse_node.py  node.py  prometheus.py  repository.py  scylla_cluster.py  scylla_docker_cluster.py  scylla_manager.py  scylla_monitoring.py  scylla_node.py  scylla_podman_cluster.py  scylla_repository.py  scylla_rest.py  test_common.py  urchin_cluster.py  urchin_node.py
ccmlib/cmds/: cluster_cmds.py  command.py  node_cmds.py
ccmlib/containers/: docker_client.py  scylla_node.py
ccmlib/resources/docker/sniproxy/: Dockerfile
ccmlib/scylla_test_ssl/: scylla-manager-agent.crt  scylla-manager-agent.key
ccmlib/utils/: __init__.py  debug.py  download.py  inotify.py  sni_proxy.py  ssl_utils.py  version.py
docs/: DOCKER_ARCHITECTURE.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICK_START.md  DOCKER_USAGE_GUIDE.md  docker-ccm.md  monitoring.md  podman-network-topology.md
old_tests/: test_cmds.py  test_common.py  test_lib.py
scripts/: download_enterprise.sh  download_master.sh  download_rc_version.sh  download_release.sh
ssl/: ccm_node.cer  ccm_node.crl  ccm_node.key  ccm_node.pem
tests/: CACHING_TESTS_README.md  ccmcluster.py  ccmtest.py  conftest.py  test_add_node_without_datacenter.py  test_build_mode_extraction.py  test_caching_hash.py  test_cluster_add_cmd.py  test_cluster_cleanup.py  test_common.py  test_config.py  test_container_client.py  test_docker_integration.py  test_effective_workdir.py  test_help.py  test_internal_functions.py  test_lib.py  test_max_log_matches.py  test_monitoring_integration.py  test_performance_optimizations.py  test_scylla_cmds.py  test_scylla_docker_cluster.py  test_scylla_download.py  test_scylla_ext_opts.py  test_scylla_manager.py  test_scylla_monitoring.py  test_scylla_podman_cluster.py  test_scylla_relocatable_cluster.py  test_scylla_repository.py  test_set_keyspace_initial_tablets.py  test_topology.py  test_utils_inotify.py  test_utils_version.py  test_version_error_messages.py  test_version_parsing.py
tests/old/: test_cmds.py  test_common.py  test_issues.py  test_lib.py
