[project]
name = "ccm"
version = "2.0.5"
license = { file = "license.txt"}
description = "Cassandra Cluster Manager"
authors = [
    {name = "Sylvain Lebresne", email = "sylvain@datastax.com"}
]
maintainers = [
 {name="ScyllaDB Contributors"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ruamel-yaml",
    "psutil",
    "requests",
    "packaging",
    "boto3",
    "tqdm",
    "urllib3 < 2",
]
[project.urls]
Repository = "https://github.com/scylladb/scylla-ccm"
Issues = "https://github.com/scylladb/scylla-ccm/issues"

[project.scripts]
ccm = "ccmlib.bin:main"

[dependency-groups]
dev = [
  "pytest",
  "awscli"
]
[tool.setuptools]
packages = ["ccmlib", "ccmlib.cmds", "ccmlib.utils", "ccmlib.bin"]

[tool.pytest.ini_options]
python_classes = ["*Test", "Test*"]
python_files = ["test_*", "*_test"]
python_functions = ["test_*", "*_test"]
testpaths = "tests"
norecursedirs = [".*", "ssl", "*.egg-info", "ccmlib", "docs"]
log_cli = true
log_cli_level = "ERROR"
log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)-8s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "tests/test_results/ccm.log"
markers = [
  "docker: Run tests with docker image",
  "reloc: Run tests with relocatable packages",
  "cassandra: Run tests with cassandra binaries",
  "repo_tests: Run test for testing get versions"
]
filterwarnings = ["error", "ignore::ResourceWarning"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
