[project]
name = "ccm"
version = "2.0.5"
license = "Apache-2.0"
description = "Cassandra Cluster Manager"
authors = [
    {name = "Sylvain Lebresne", email = "sylvain@datastax.com"}
]
maintainers = [
 {name="ScyllaDB Contributors"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ruamel-yaml",
    "pyyaml",
    "psutil",
    "requests",
    "packaging",
    "boto3",
    "tqdm",
    "urllib3",
]
[project.urls]
Repository = "https://github.com/scylladb/scylla-ccm"
Issues = "https://github.com/scylladb/scylla-ccm/issues"

[project.scripts]
ccm = "ccmlib.bin:main"

[dependency-groups]
dev = [
  "pytest",
  "awscli"
]
[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["ccmlib*"]
exclude = ["ccmlib.resources*", "ccmlib.scylla_test_ssl"]

[tool.setuptools.package-data]
ccmlib = [
    "resources/bin/*.sh",
    "resources/docker/sniproxy/*",
    "scylla_test_ssl/scylla-manager-agent.key",
    "scylla_test_ssl/scylla-manager-agent.crt"
]

[tool.pytest.ini_options]
python_classes = ["*Test", "Test*"]
python_files = ["test_*", "*_test"]
python_functions = ["test_*", "*_test"]
testpaths = "tests"
norecursedirs = [".*", "ssl", "*.egg-info", "ccmlib", "docs"]
log_cli = true
log_cli_level = "ERROR"
log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)-8s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "tests/test_results/ccm.log"
markers = [
  "docker: Run tests with docker image",
  "reloc: Run tests with relocatable packages",
  "cassandra: Run tests with cassandra binaries",
  "repo_tests: Run test for testing get versions",
  "integration: Slow integration tests requiring Docker and real Scylla"
]
filterwarnings = ["error", "ignore::ResourceWarning"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"
